# atlasopenmagic-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PATs-review.md  README.md  pixi.toml  pyproject.toml
src/atlasopenmagic_mcp/: __init__.py  cli.py  nomenclature.py  resources.py  server.py
src/atlasopenmagic_mcp/tools/: __init__.py  _helpers.py  discovery.py  metadata.py  urls.py  weights.py
tests/: conftest.py  test_resources.py  test_tools_discovery.py  test_tools_metadata.py  test_tools_urls.py  test_tools_weights.py
