[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "atlasopenmagic-mcp"
authors = [
  { name = "Gabriela Guerrero", email = "gabriela.guerrero@cern.ch" },
]
description = "MCP Server for ATLAS Open Data metadata and file retrieval"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "mcp>=1.0",
  "atlasopenmagic>=1.9",
]

[project.scripts]
atlasopenmagic-mcp = "atlasopenmagic_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/atlas-outreach-data-tools/atlasopenmagic-mcp"
"Bug Tracker" = "https://github.com/atlas-outreach-data-tools/atlasopenmagic-mcp/issues"

[tool.hatch]
version.path = "src/atlasopenmagic_mcp/__init__.py"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]

[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
  "pytest-asyncio >=0.24",
]
dev = [
  { include-group = "test" },
]


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
strict = true
filterwarnings = [
  "error",
  "ignore:invalid escape sequence",
]
log_level = "INFO"
testpaths = [
  "tests",
]
markers = [
    "slow: marks tests as slow (skipped by default, use --runslow to run)",
]
asyncio_mode = "auto"


[tool.coverage]
run.source = ["atlasopenmagic_mcp"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "atlasopenmagic_mcp.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["atlasopenmagic.*"]
ignore_missing_imports = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]


[tool.pylint]
py-version = "3.10"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "broad-exception-caught",
  "design",
  "duplicate-code",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
